# chatgpt

./: api.env  chatgpt.py  config.py  fmpData.py  main.py  pyproject.toml  requirements.txt
datasource/: dataSourceConfig.py
doc/: langChain学习总结.md
entity/: __init__.py  generator_tools.py
entity/function/: __init__.py  info.py  param.py
entity/gpt/: assistant.py  user_assistant.py
langchaindemo/: few_shot_chat_prompt.py  few_shot_prompt.py
