[tool.poetry]
name = "fin-assistant"
version = "0.1.0"
description = ""
authors = ["黄仁宁 <huangrenning@winbulls.com>"]

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "0.6.0"
anyio = "4.2.0"
blinker = "1.7.0"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
distro = "1.9.0"
exceptiongroup = "1.2.0"
flask = "3.0.0"
fmpsdk = "20230623.0"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.2"
httpx = "0.26.0"
idna = "3.6"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
markupsafe = "2.1.3"
mysql-connector-python = "8.3.0"
numpy = "1.26.3"
openai = "1.7.1"
pandas = "2.2.0"
pydantic = "2.5.3"
pydantic-core = "2.14.6"
python-dateutil = "2.8.2"
python-dotenv = "1.0.1"
pytz = "2023.3.post1"
requests = "2.31.0"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.25"
tqdm = "4.66.1"
typing-extensions = "4.9.0"
tzdata = "2023.4"
urllib3 = "2.1.0"
werkzeug = "3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
